--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Eliel512",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "crypto": "^1.0.1",
